# picasso-workflow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bump-version.yml  run-unittests.yml
examples/: 240318_sgl_dataset_workflow.py
examples/01_intro/: 01_sgl_dataset_workflow.py  02_aggregation_workflow.py
examples/02_predefined_workflows/: sgl_dataset_workflow.py
examples/intro/: aggregation_workflow.py  sgl_dataset_workflow.py
picasso-workflow/: __init__.py  analyse.py  confluence.py  picasso_outpost.py  process_brightfield.py  util.py  workflow.py
picasso-workflow/tests/: test_confluence.py
picasso_workflow/: .env_template  .pre-commit-config.yaml  __init__.py  analyse.py  confluence.py  picasso_outpost.py  predefined_aggregation_workflows.py  predefined_singledataset_workflows.py  process_brightfield.py  standard_aggregation_workflows.py  standard_singledataset_workflows.py  util.py  workflow.py
picasso_workflow/dbscan_molint/: dbscan.py  io.py  mask.py  output_metrics.py
picasso_workflow/outpost_modules/: __init__.py  mask.py  ripleys.py
picasso_workflow/ripleys_analysis/: dataModule.py  maskModule.py  ripleysModule.py  run_ripleysAnalysis.py  test_suite.py
picasso_workflow/tests/: __init__.py  test_analyse.py  test_confluence.py  test_integration.py  test_picasso_outpost.py  test_process_brightfield.py  test_util.py  test_workflow.py  test_z_integration.py
picasso_workflow/tests/TestData/integration/3C_30px_1kframes_1/: DisplaySettings.json
picasso_workflow/tests/TestData/integration/3C_30px_1kframes_shifted_1/: 3C_30px_1kframes_shifted_MMStack_Pos0.ome.raw  3C_30px_1kframes_shifted_MMStack_Pos0_metadata.txt  DisplaySettings.json
scripts_and_snippets/: ev_231208.py  parameters.py
